@@ -34,6 +34,7 @@ debian-installer (201007xx) UNRELEASED; urgency=low
   * Use mklibs-copy on hurd-i386 for the time being.
   * Disable the uninstallable or otherwise broken standard udebs from the
     monolithic hurd-i386 images.
+  * Add /lib/ld.so and /servers/exec to hurd-i386 initrd's.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 23 Jul 2010 09:36:57 +0100
 
